<?xml version="1.0" encoding="utf-8"?>
<!-- Copyend (C) 2013 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textStyle="bold"
                android:textSize="14sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_address"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textStyle="bold"
                android:textSize="14sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textStyle="bold"
                android:textSize="14sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ch1"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch1_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch1_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch2"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch2_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch2_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch3"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch3_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch3_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch4"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch4_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch4_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ch5"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch5_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch5_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch6"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/ch6_label"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch6_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch7"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch7_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch7_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch8"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ch8_label"
                android:gravity="end"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ch_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/micro_volts"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_resolution"
                android:textStyle="bold"
                android:textSize="14sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/resolution_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gain_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_gain"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gain_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:textSize="10sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch_plots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:enabled="false"
        android:text="@string/real_time_plot_label"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_ch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/aqua"
                android:checked="true"
                android:text="@string/ch1"
                android:textColor="@color/aqua"
                android:textColorLink="@color/fuchsia" />

            <CheckBox
                android:id="@+id/checkBox_ch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/fuchsia"
                android:checked="true"
                android:text="@string/ch2"
                android:textColor="@color/fuchsia" />

            <CheckBox
                android:id="@+id/checkBox_ch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/green"
                android:checked="true"
                android:text="@string/ch3"
                android:textColor="@color/green" />

            <CheckBox
                android:id="@+id/checkBox_ch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_purple"
                android:checked="true"
                android:text="@string/ch4"
                android:textColor="@android:color/holo_purple" />

            <CheckBox
                android:id="@+id/checkBox_ch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:checked="true"
                android:text="@string/ch5"
                android:textColor="@color/orange" />

            <CheckBox
                android:id="@+id/checkBox_ch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/red"
                android:checked="true"
                android:text="@string/ch6"
                android:textColor="@color/red" />

            <CheckBox
                android:id="@+id/checkBox_ch7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:checked="true"
                android:text="@string/ch7"
                android:textColor="@color/yellow" />

            <CheckBox
                android:id="@+id/checkBox_ch8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/ch8"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/YAxis_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:rotation="-90"
                android:text="@string/YAxis_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/layout_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/cardview_default_elevation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/XAxis_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/XAxis_label"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_label" />

</LinearLayout>
